--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -6,12 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!--新闻界面-->
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/llt_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:clipChildren="false">
+
+   <android.support.design.widget.AppBarLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:elevation="0dp">
 
         <LinearLayout
             android:id="@+id/toolbar"
@@ -19,6 +24,9 @@
             android:layout_height="44dp"
             android:background="@color/white"
             android:orientation="horizontal"
+            app:layout_collapseMode="parallax"
+            app:layout_collapseParallaxMultiplier="0.1"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             android:gravity="center_vertical" >
 
             <ImageView
@@ -98,14 +106,17 @@
             android:background="#e8e8e8"
             />
 
+   </android.support.design.widget.AppBarLayout>
+
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:overScrollMode="never"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
 
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
     <!--搜索界面-->
     <LinearLayout
